--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 </div>
    <br><br>
 <div style="font:18px arial; text-align:left; width:700">
-Get to know Purple Squirrel in 3 minutes! Check out our CD sampler.
-</dev>
+Get to know Purple Squirrel in 3 minutes - check out our CD sampler!
+</div>
 <br><br>
-<iframe width="600" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176161954&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+<iframe width="600" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176161954&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 <br><br>
 <div style="font:18px arial; text-align:left; width:700">
 Complete tracks from our "Split Shot" CD!
-</dev>
+</div>
 <br><br>
 <iframe width="600" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176162303&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 <br>
