change my email address

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ Chris Malley
 <br>
 <script>
     //protect email address from spambots
-    var emailAddress=('chris' + '@' + 'chrismalley' + '.com');
+    var emailAddress=('chris' + '@' + 'purplesquirrelmusic' + '.com');
     document.write('<a href="mailto:' + emailAddress + '">' + emailAddress + '</a>');
 </script>
 <br>
