update copyright to 2015

--- a/info.html
+++ b/info.html
@@ -2,9 +2,9 @@
 <body style="overflow:scroll">
  <center>
    <img src="images/title.png"/>
-   <br><br>
+   <br>
    <img src="images/photo.png"/>
-   <br><br>
+   <br>
 <!-- Begin navigation image map --> 
 <div style="text-align:center; width:529px; margin-left:auto; margin-right:auto;">
 <img id="Image-Maps_9201303300052016" src="images/navigation-info.png" usemap="#Image-Maps_9201303300052016" border="0" width="529" height="80" alt="" />
@@ -25,7 +25,7 @@
 </center>
    <br><br>
 <center>
-<div style="font:18px arial; text-align:left; width:700">
+<div style="font:14px arial; text-align:left; width:700">
 Purple Squirrel plays a rare breed of instrumental music, infused with modern jazz, rock, funk and blues influences.  Based in Boulder, Colorado, the quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem. They released "Split Shot", a CD of original compositions, and have been playing regularly around the Boulder/Denver area.
 <p>
 About the band members ...
@@ -40,7 +40,7 @@ About the band members ...
 </div>
 <br><br>
 <div style="font:12px arial">
-- All content Copyright &copy; 2011-2014 Chris Malley & Bob Schlesinger -
+Copyright &copy; 2011-2015 Chris Malley & Bob Schlesinger - All Rights Reserverd
 </div>
  </center>
 </body>
