--- a/calendar.html
+++ b/calendar.html
@@ -2,9 +2,9 @@
  <body style="overflow:scroll">
  <center>
    <img src="images/title.png"/>
-   <br><br>
+   <br>
    <img src="images/photo.png"/>
-   <br><br>
+   <br>
 <!-- Begin navigation image map --> 
 <div style="text-align:center; width:529px; margin-left:auto; margin-right:auto;">
 <img id="Image-Maps_9201303300052016" src="images/navigation-calendar.png" usemap="#Image-Maps_9201303300052016" border="0" width="529" height="80" alt="" />
@@ -30,7 +30,7 @@
 </center>
 <center>
 <div style="font:12px arial">
-- All content Copyright &copy; 2011-2014 Chris Malley & Bob Schlesinger -
+Copyright &copy; 2011-2015 Chris Malley & Bob Schlesinger - All Rights Reserved
 </div>
  </center>>
 </body>
