--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <body style="overflow:scroll">
  <center>
    <img src="images/title.png"/>
-   <br><br>
+   <br>
    <img src="images/photo.png"/>
-   <br><br>
+   <br>
 <!-- Begin navigation image map -->
 <div style="text-align:center; width:529px; margin-left:auto; margin-right:auto;">
 <img id="Image-Maps_9201303300052016" src="images/navigation-listen.png" usemap="#Image-Maps_9201303300052016" border="0" width="529" height="80" alt="" />
@@ -39,7 +39,7 @@ Complete tracks from our "Split Shot" CD!
 <iframe width="600" height="375" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/58721502&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 <br><br>
 <div style="font:12px arial">
-- All content Copyright &copy; 2011-2014 Chris Malley & Bob Schlesinger -
+Copyright &copy; 2011-2015 Chris Malley & Bob Schlesinger - All Rights Reserved
 </div>
  </center>
 </body>
