revised info page, remove bios from Mark and Christian, and other rhythm-section members

--- a/info.html
+++ b/info.html
@@ -26,17 +26,21 @@
    <br><br>
 <center>
 <div style="font:14px arial; text-align:left; width:700">
-Purple Squirrel plays a rare breed of instrumental music, infused with modern jazz, rock, funk and blues influences.  Based in Boulder, Colorado, the quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem. They released "Split Shot", a CD of original compositions, and have been playing regularly around the Boulder/Denver area.
+<b>Purple Squirrel</b> plays a rare breed of original instrumental music, infused with modern jazz, funk, rock and blues influences. Based in Boulder, Colorado, the quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem. They have been playing clubs and festivals since 2013, and their CD "Split Shot" is <a href="https://itunes.apple.com/us/album/split-shot-ep/id569176002" target="_blank">available on iTunes</a>. The rhythm-section roster includes some of Colorado's finest bassists and drummers.
 <p>
-About the band members ...
+Band leaders ...
 <p>
-<a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> is the first-call guitarist for a diverse range of projects in the Boulder/Denver area. Originally from Connecticut, he's been playing since the age of 8, and honed his chops in New York and Los Angeles before relocating to Colorado in 1990. In addition to guitar, he sings and doubles on other stringed instruments (mandolin, violin, ukulele, bass,...)
+<a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> is the first-call guitarist for many groups in the Boulder/Denver area. Originally from Connecticut, he's been playing since the age of 8, and honed his chops in New York and Los Angeles before relocating to Colorado in 1990. He's a prolific composer, and has written the majority of Purple Squirrel's original material.
 <p>
 <a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist, composer and producer.  He has toured the country as keyboardist for singer Hazel Miller and with his jazz group, Tsunami.  He regularly performs with his own jazz trio.  He writes soundtracks for films and theater and recently produced a CD of children's music.
 <p>
-<a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a>'s hard-grooving acoustic bass sound was birthed in the New York area, where he learned to play many musical styles. His professional career started in New Jersey in the early 70's. In 1980 he moved to Colorado with the band Arabesque and has since been a sought-after sideman, playing on over 100 albums. Mark has toured Europe, regularly appears at festivals and clubs across the country, and has performed with a long list of legendary performers.
+Bass ...
 <p>
-<a href="http://www.christianteele.com" target="_blank">Christian Teele</a> is best known for his work as the house drummer for the internationally-syndicated radio show "eTown", where he has backed up artists such as James Taylor, Rickie Lee Jones, David Crosby, Ben Harper, Moby, Joan Osborne and many others. In addition to playing on eTown, Christian is also an accomplished session drummer, lending his talents to hundreds of records as well as music for film and TV. Most recently, he has launched his own online service, <a href="http://www.yoursessiondrummer.com" target="_blank">yoursessiondrummer.com</a> , where, recording in his own home studio, he adds drum and percussion tracks to projects from all over the world. Christian also keeps busy playing live with a wide range of local artists, and runs a successful teaching practice.
+<a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a> :: <a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> :: <a href="https://www.facebook.com/chris.engleman.9" target="_blank">Chris Engleman</a> :: <a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a>
+<p>
+Drums ...
+<p>
+<a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> 
 </div>
 <br><br>
 <div style="font:12px arial">
