--- a/band/index.html
+++ b/band/index.html
@@ -3,11 +3,12 @@
   <br><br>
   <big><big>Welcome to the Squirrel's Nest</big></big>
   <br>
-  All original content &copy;&nbsp;2009-2014
+  &copy;&nbsp;2009-2015, All Rights Reserved
   <br><br><br>
   <a href="charts"><img src="images/charts.jpg" border=0></a>&nbsp;&nbsp;&nbsp;
   <a href="mp3"><img src="images/mp3.jpg" border=0></a>&nbsp;&nbsp;&nbsp;
   <a href="promo.html"><img src="images/promo.jpg" border=0></a>&nbsp;&nbsp;&nbsp;
+  <a href="live"><img src="images/live.jpg" border=0></a>&nbsp;&nbsp;&nbsp;
   <a href="other"><img src="images/other.jpg" border=0></a>
   <br><br>
   </center>
