--- a/info.html
+++ b/info.html
@@ -26,7 +26,7 @@
    <br><br>
 <center>
 <div style="font:14px arial; text-align:left; width:700">
-<b>Purple Squirrel</b> plays a rare breed of original instrumental music, infused with modern jazz, funk, rock and blues influences. Based in Boulder, Colorado, the quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem. They have been playing clubs and festivals since 2013, and their CD "Split Shot" is <a href="https://itunes.apple.com/us/album/split-shot-ep/id569176002" target="_blank">available on iTunes</a>. The rhythm-section roster includes some of Colorado's finest bassists and drummers.
+<b>Purple Squirrel</b> plays a rare breed of original instrumental music, infused with modern jazz, funk, rock and blues influences. Based in Boulder, Colorado, the quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem. They have been playing clubs and festivals since 2013, and their CD "Split Shot" is <a href="https://itunes.apple.com/us/album/split-shot-ep/id569176002" target="_blank">available on iTunes</a>. The rhythm-section roster features some of Colorado's finest bassists and drummers.
 <p>
 Band leaders ...
 <p>
