--- a/band/promo.html
+++ b/band/promo.html
@@ -4,7 +4,9 @@
   <p>
   <h3>Event info</h3>
   <ul>
-  <li><b>Bio:</b> Purple Squirrel plays a rare breed of instrumental music, infused with modern jazz, rock, funk and blues influences. The quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem, and released "Split Shot", a CD of original compositions. Featuring Mark Diamond (bass) and Christian Teele (drums).</li>
+  <li><b>Bio:</b>
+Purple Squirrel plays a rare breed of original instrumental music, infused with modern jazz, funk, rock and blues influences. Based in Boulder, Colorado, the quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem. The rhythm-section roster features some of Colorado's finest bassists and drummers.
+</li>
   <li><b>Keywords:</b> jazz rock funk instrumental</li>
   <li><b>URL:</b> www.purplesquirrelmusic.com</li>
   </ul>
