--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@ Chris Malley
 <div>
 <br><br>
 <div style="font:12px arial">
-Copyright &copy; 2011-2015 Chris Malley & Bob Schlesinger - All Rights Reserved
+Copyright &copy; 2011-2015 Purple Squirrel - All Rights Reserved
 </div>
  </center>
  </body>
