--- a/info.html
+++ b/info.html
@@ -41,10 +41,14 @@ Bass ...
 Drums ...
 <p>
 <a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> 
+<p>
+Others ...
+<p>
+<a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: <a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: <a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a>
 </div>
 <br><br>
 <div style="font:12px arial">
-Copyright &copy; 2011-2015 Chris Malley & Bob Schlesinger - All Rights Reserverd
+Copyright &copy; 2011-2015 Purple Squirrel - All Rights Reserverd
 </div>
  </center>
 </body>
