--- a/watch.html
+++ b/watch.html
@@ -29,7 +29,7 @@
 <iframe width="560" height="315" src="//www.youtube.com/embed/hA4piMHWPdc" frameborder="0" allowfullscreen></iframe>
    <br><br>
 <div style="font:12px arial">
-Copyright &copy; 2011-2015 Chris Malley & Bob Schlesinger - All Rights Reserved
+Copyright &copy; 2011-2015 Purple Squirrel - All Rights Reserved
 </div>
  </center>
  </body>
