--- a/info.html
+++ b/info.html
@@ -40,7 +40,7 @@ Bass ...
 <p>
 Drums ...
 <p>
-<a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> 
+<a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> :: <a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a>
 <p>
 Others ...
 <p>
