--- a/info.html
+++ b/info.html
@@ -44,7 +44,7 @@ Drums ...
 <p>
 Others ...
 <p>
-<a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: <a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: <a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a>
+<a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: <a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: <a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a> :: <a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a>
 </div>
 <br><br>
 <div style="font:12px arial">
