change contact email

--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@ Chris Malley
 <br>
 <script>
     //protect email address from spambots
-    var emailAddress=('chris' + '@' + 'purplesquirrelmusic' + '.com');
-    document.write('<a href="mailto:' + emailAddress + '">' + emailAddress + '</a>');
+    var emailAddress=('chris' + '@' + 'chrismalley' + '.com');
+    document.write('<a href="mailto:' + emailAddress + '?Subject=Purple%20Squirrel">' + emailAddress + '</a>');
 </script>
 <br>
 (303) 494-8849
