--- a/band/promo.html
+++ b/band/promo.html
@@ -13,17 +13,17 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <p>
   <h3>Boulder event calendars</h3>
   <ul>
-<li><a href="http://www.boulderweekly.com" target="_blank">Boulder Weekly</a>
-<li><a href="http://www.dailycamera.com/events" target="_blank">Daily Camera</a>
+<li><a href="http://www.boulderweekly.com" target="_blank">Boulder Weekly (SpinGo)</a>
+<li><a href="http://www.dailycamera.com/events" target="_blank">Daily Camera (SpinGo)</a>
 <li><a href="http://www.boulderdowntown.com/events/submit" target="_blank">Downtown Boulder</a>
 <li><a href="http://www.kgnu.org/cgi-bin/noticeform.py?Type=ConcertCalendar" target="_blank">KGNU Concert Calendar</a>
   </ul>
   <p>
   <h3>Denver event calendars</h3>
   <ul>
-<li><a href="http://calendar.denverpost.com" target="_blank">Denver Post</a>
+<li><a href="http://calendar.denverpost.com" target="_blank">Denver Post (CitySpark)</a>
 <li><a href="http://events.publicbroadcasting.net/kuvo/events.eventsmain?action=submitEvent" target="_blank">KUVO Events Calendar</a>
-<li><a href="http://marqueemag.com/calendar" target="_blank">Marquee Magazine</a>
+<li><a href="http://marqueemag.com/calendar" target="_blank">Marquee Magazine (SpinGo)</a>
 <li><a href="http://www.westword.com/feedback/SubmitAnEvent/" target="_blank">Westword</a>
 <li><a href="http://yellowscene.com/" target="_blank">Yellow Scene</a>
   </ul>
