--- a/info.html
+++ b/info.html
@@ -36,15 +36,28 @@ Band leaders ...
 <p>
 Bass ...
 <p>
-<a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a> :: <a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> :: <a href="https://www.facebook.com/chris.engleman.9" target="_blank">Chris Engleman</a> :: <a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a>
+<a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a> :: 
+<a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> :: 
+<a href="https://www.facebook.com/chris.engleman.9" target="_blank">Chris Engleman</a> :: 
+<a href="https://ericthorin.com" target="_blank">Eric Thorin</a> :: 
+<a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a>
 <p>
 Drums ...
 <p>
-<a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> :: <a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a>
+<a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: 
+<a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> :: 
+<a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a>
 <p>
-Others ...
+Keys ...
 <p>
-<a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: <a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: <a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a> :: <a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a>
+<a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: 
+<a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: 
+<a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a>
+<p>
+Horns ...
+<p>
+<a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a> ::
+<a href="http://www.bobbyrebz.com" target="_blank">Bob Rebholz</a>
 </div>
 <br><br>
 <div style="font:12px arial">
