--- a/info.html
+++ b/info.html
@@ -57,6 +57,7 @@ Keys ...
 Horns ...
 <p>
 <a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a> ::
+<a href="https://www.facebook.com/tim.libby.96" target="_blank">Tim Libby</a> ::
 <a href="http://www.bobbyrebz.com" target="_blank">Bob Rebholz</a>
 </div>
 <br><br>
