--- a/info.html
+++ b/info.html
@@ -40,13 +40,15 @@ Bass ...
 <a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> :: 
 <a href="https://www.facebook.com/chris.engleman.9" target="_blank">Chris Engleman</a> :: 
 <a href="https://ericthorin.com" target="_blank">Eric Thorin</a> :: 
-<a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a>
+<a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a> ::
+<a href="http://colorado.academia.edu/BrianCasey" target="_blank">Brian Casey</a>
 <p>
 Drums ...
 <p>
 <a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: 
 <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> :: 
-<a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a>
+<a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a> ::
+Matt Houston
 <p>
 Keys ...
 <p>
