update bob's bio

--- a/info.html
+++ b/info.html
@@ -32,7 +32,7 @@ Band leaders ...
 <p>
 <a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> is the first-call guitarist for many groups in the Boulder/Denver area. Originally from Connecticut, he's been playing since the age of 8, and honed his chops in New York and Los Angeles before relocating to Colorado in 1990. He's a prolific composer, and has written the majority of Purple Squirrel's original material.
 <p>
-<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist, composer and producer.  He has toured the country as keyboardist for singer Hazel Miller and with his jazz group, Tsunami.  He regularly performs with his own jazz trio.  He writes soundtracks for films and theater and recently produced a CD of children's music.
+<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist, composer and producer.  He has toured the country as keyboardist for singer Hazel Miller and with his jazz group, Tsunami.  He regularly performs with his own jazz trio.  He writes soundtracks for films, video, commercials and theater, and has produced CDs.
 <p>
 Bass ...
 <p>
