--- a/info.html
+++ b/info.html
@@ -28,13 +28,13 @@
 <div style="font:14px arial; text-align:left; width:700">
 <b>Purple Squirrel</b> plays a rare breed of original instrumental music, infused with modern jazz, funk, rock and blues influences. Based in Boulder, Colorado, the quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem. They have been playing clubs and festivals since 2013, and their CD "Split Shot" is <a href="https://itunes.apple.com/us/album/split-shot-ep/id569176002" target="_blank">available on iTunes</a>. The rhythm-section roster features some of Colorado's finest bassists and drummers.
 <p>
-Band leaders ...
+<b>Band leaders</b> ...
 <p>
 <a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> is the first-call guitarist for many groups in the Boulder/Denver area. Originally from Connecticut, he's been playing since the age of 8, and honed his chops in New York and Los Angeles before relocating to Colorado in 1990. He's a prolific composer, and has written the majority of Purple Squirrel's original material.
 <p>
 <a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist, composer and producer.  He has toured the country as keyboardist for singer Hazel Miller and with his jazz group, Tsunami.  He regularly performs with his own jazz trio.  He writes soundtracks for films, video, commercials and theater, and has produced CDs.
 <p>
-Bass ...
+<b>Bass</b> ...
 <p>
 <a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a> :: 
 <a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> :: 
@@ -43,20 +43,20 @@ Bass ...
 <a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a> ::
 <a href="http://colorado.academia.edu/BrianCasey" target="_blank">Brian Casey</a>
 <p>
-Drums ...
+<b>Drums</b> ...
 <p>
 <a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: 
 <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> :: 
 <a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a> ::
 Matt Houston
 <p>
-Keys ...
+<b>Keys</b> ...
 <p>
 <a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: 
 <a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: 
 <a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a>
 <p>
-Horns ...
+<b>Horns</b> ...
 <p>
 <a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a> ::
 <a href="https://www.facebook.com/tim.libby.96" target="_blank">Tim Libby</a> ::
