--- a/info.html
+++ b/info.html
@@ -54,7 +54,8 @@ Matt Houston
 <p>
 <a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: 
 <a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: 
-<a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a>
+<a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a> :: 
+<a href="https://www.facebook.com/victor.mestasperez" target="_blank">Victor Mestas</a>
 <p>
 <b>Horns</b> ...
 <p>
