tighten up bios

--- a/info.html
+++ b/info.html
@@ -30,9 +30,9 @@
 <p>
 <b>Band leaders</b> ...
 <p>
-<a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> is the first-call guitarist for many groups in the Denver/Boulder area. Originally from Connecticut, he's been playing since the age of 8, and honed his chops in New York and Los Angeles before relocating to Colorado in 1990. He's a prolific composer, and has written the majority of Purple Squirrel's original material (52 tunes in 2014, one per week!)
+<a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> honed his chops in New York and Los Angeles before moving to Colorado, where he's the first-call guitarist for many groups. He's a prolific composer, and has written the majority of Purple Squirrel's material &#8212; including 52 tunes in 2014, one per week!
 <p>
-<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist, composer and producer.  He has toured the country as keyboardist for singer Hazel Miller and with his jazz group, Tsunami.  He regularly performs with his own jazz trio.  He writes soundtracks for films, video, commercials and theater, and has produced CDs.
+<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist, composer and producer.  He has toured with singer Hazel Miller and his jazz group Tsunami. He performs with his own jazz trio, writes soundtracks (films, video, commercials, theater) and is a producer for other artists.
 <p>
 <b>Bass</b> ...
 <p>
