cleanup info page

--- a/info.html
+++ b/info.html
@@ -32,10 +32,11 @@
 <p>
 <a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> honed his chops in New York and Los Angeles before moving to Colorado, where he's the first-call guitarist for many groups. He's a prolific composer, and has written the majority of Purple Squirrel's material &#8212; including 52 tunes in 2014, one per week!
 <p>
-<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist, composer and producer.  He has toured with singer Hazel Miller and his jazz group Tsunami. He performs with his own jazz trio, writes soundtracks (films, video, commercials, theater) and is a producer for other artists.
+<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a keyboardist, composer and producer.  He has toured with singer Hazel Miller and his jazz group Tsunami. He performs with his own jazz trio, writes soundtracks (films, video, commercials, theater) and is a producer for other artists.
 <p>
-<b>Bass</b> ...
+<b>Honorary squirrels</b> ...
 <p>
+Bass &#8212
 <a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a> :: 
 <a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> :: 
 <a href="https://www.facebook.com/chris.engleman.9" target="_blank">Chris Engleman</a> :: 
@@ -43,22 +44,19 @@
 <a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a> ::
 <a href="http://colorado.academia.edu/BrianCasey" target="_blank">Brian Casey</a>
 <p>
-<b>Drums</b> ...
-<p>
+Drums &#8212
 <a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: 
 <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> :: 
 <a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a> ::
 Matt Houston
 <p>
-<b>Keys</b> ...
-<p>
+Keys &#8212
 <a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: 
 <a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: 
 <a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a> :: 
 <a href="https://www.facebook.com/victor.mestasperez" target="_blank">Victor Mestas</a>
 <p>
-<b>Horns</b> ...
-<p>
+Horns &#8212
 <a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a> ::
 <a href="https://www.facebook.com/tim.libby.96" target="_blank">Tim Libby</a> ::
 <a href="http://www.bobbyrebz.com" target="_blank">Bob Rebholz</a>
