more on contact page

--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,11 @@
        <a style="text-decoration:none; color:black; font-size:12px; font-family:verdana;" href="calendar.html"></a>
        <a style="text-decoration:none; color:black; font-size:12px; font-family:verdana;" href="http://www.image-maps.com/index.php?aff=mapped_users_9201303300052016"></a></div>
 <!-- End navigation image map -->
-
-   <br><br>
+<br><br>
+<div style="font: 16px arial">
+For bookings at festivals, clubs, private parties, and other events, contact:
+</div>
+<br><br>
 <div style="font: 20px arial">
 Chris Malley
 <br>
