--- a/info.html
+++ b/info.html
@@ -30,9 +30,22 @@
 <p>
 <b>Band leaders</b> ...
 <p>
-<a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> honed his chops in New York and Los Angeles before moving to Colorado, where he's the first-call guitarist for many groups. He's a prolific composer, and has written the majority of Purple Squirrel's material &#8212; including 52 tunes in 2014, one per week!
+<a href="http://www.chrismalley.com" target="_blank">Chris Malley</a> is a versatile 
+multi-instrumentalist (guitar, mandolin, violin, bass, keyboards), composer and 
+recording engineer.  He played widely in New England, New York and Los Angeles 
+before moving to Colorado.  Comfortable in all styles and 
+situations, he's the first-call guitarist for many groups. Chris is a prolific composer, 
+and has written the majority of Purple Squirrel's material &#8212; including 52 tunes 
+in 2014, one per week!
 <p>
-<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a keyboardist, composer and producer.  He has toured with singer Hazel Miller and his jazz group Tsunami. He performs with his own jazz trio, writes soundtracks (films, video, commercials, theater) and is a producer for other artists.
+<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist,
+producer and composer whose work covers diverse styles, including jazz, blues, R&B and 
+classical. In his dozen years with singer Hazel Miller, he played Colorado's Red Rocks 
+Amphitheater six times, opened for James Brown and Earth Wind & Fire, performed at the 
+Telluride Blues Festival, Winter Park Jazz Festival, Jazz Aspen, and with the Longmont 
+Symphony Orchestra.  As leader of the jazz group Tsunami, he toured the U.S. and Europe. 
+Bob produces projects for other artists, and he writes soundtracks for films, video, 
+commercials and theater. 
 <p>
 <b>Honorary squirrels</b> ...
 <p>
