--- a/band/promo.html
+++ b/band/promo.html
@@ -13,8 +13,7 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <p>
   <h3>Boulder event calendars</h3>
   <ul>
-<li><a href="http://www.boulderweekly.com" target="_blank">Boulder Weekly (SpinGo)</a>
-<li><a href="http://www.dailycamera.com/events" target="_blank">Daily Camera (SpinGo)</a>
+<li><a href="https://www.spingo.com/submit/" target="_blank">SpinGo (Boulder Weekly, Daily Camera)</a>
 <li><a href="http://www.boulderdowntown.com/events/submit" target="_blank">Downtown Boulder</a>
 <li><a href="http://www.kgnu.org/cgi-bin/noticeform.py?Type=ConcertCalendar" target="_blank">KGNU Concert Calendar</a>
   </ul>
