add promo image

--- a/band/promo.html
+++ b/band/promo.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <big>= Purple Squirrel promotion =</big>
+<img src="images/promo.jpg" border=0>
   <p>
   <h3>Event info</h3>
   <ul>
