--- a/band/promo.html
+++ b/band/promo.html
@@ -27,15 +27,22 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
 <li><a href="http://yellowscene.com/" target="_blank">Yellow Scene</a>
   </ul>
   <p>
-  <h3>Social Media</h3>
+  <h3>Social Media (primary)</h3>
   <ul>
-  <li><a href="https://www.facebook.com/purplesquirrelmusic" target="_blank">Purple Squirrel @ Facebook</a>
+  <li><a href="https://www.facebook.com/purplesquirrelmusic" target="_blank">Facebook</a>
+  <li>Instagram
+  <li>Soundcloud
+  <li><a href="http://www.twitter.com" target="_blank">Twitter</a>
+  <li>YouTube
+  </ul>
+  <p>
+  <h3>Social Media (other)</h3>
+  <ul>
   <li><a href="https://www.facebook.com/groups/368200763239053/" target="_blank">Colorado Music Lovers @ Facebook</a>
   <li><a href="https://www.facebook.com/groups/404791456212782/" target="_blank">Boulder Arts @ Facebook</a>
   <li><a href="https://www.facebook.com/groups/DenverMusicScene/" target="_blank">Denver Music Scene @ Facebook</a>
   <li><a href="http://www.jambase.com/shows/AddShow.aspx" target="_blank">JamBase</a>
   <li><a href="http://www.reverbnation.com" target="_blank">ReverbNation</a>
-  <li><a href="http://www.twitter.com" target="_blank">Twitter</a>
   </ul>
   <p>
   <h3>Miscellaneous calendars and mailing lists</h3>
