add Boulder Convention and Visitors Bureau events calendar

--- a/band/promo.html
+++ b/band/promo.html
@@ -16,6 +16,7 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
 <li><a href="https://www.spingo.com/submit/" target="_blank">SpinGo (Boulder Weekly, Daily Camera)</a>
 <li><a href="http://www.boulderdowntown.com/events/submit" target="_blank">Downtown Boulder</a>
 <li><a href="http://www.kgnu.org/cgi-bin/noticeform.py?Type=ConcertCalendar" target="_blank">KGNU Concert Calendar</a>
+<li><a href="http://www.bouldercoloradousa.com/events/submit-an-event-to-the-boulder-calendar/" target="_blank">Boulder Convention and Visitors Bureau events calendar</a>
   </ul>
   <p>
   <h3>Denver event calendars</h3>
