--- a/band/promo.html
+++ b/band/promo.html
@@ -13,10 +13,10 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <p>
   <h3>Boulder event calendars</h3>
   <ul>
-<li><a href="https://www.spingo.com/submit/" target="_blank">SpinGo (Boulder Weekly, Daily Camera)</a>
+<li><a href="http://www.bouldercoloradousa.com/events/submit-an-event-to-the-boulder-calendar/" target="_blank">Boulder Convention and Visitors Bureau</a>
 <li><a href="http://www.boulderdowntown.com/events/submit" target="_blank">Downtown Boulder</a>
 <li><a href="http://www.kgnu.org/cgi-bin/noticeform.py?Type=ConcertCalendar" target="_blank">KGNU Concert Calendar</a>
-<li><a href="http://www.bouldercoloradousa.com/events/submit-an-event-to-the-boulder-calendar/" target="_blank">Boulder Convention and Visitors Bureau events calendar</a>
+<li><a href="https://www.spingo.com/submit/" target="_blank">SpinGo (Boulder Weekly, Daily Camera)</a>
   </ul>
   <p>
   <h3>Denver event calendars</h3>
@@ -24,6 +24,7 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
 <li><a href="http://calendar.denverpost.com" target="_blank">Denver Post (CitySpark)</a>
 <li><a href="http://events.publicbroadcasting.net/kuvo/events.eventsmain?action=submitEvent" target="_blank">KUVO Events Calendar</a>
 <li><a href="http://marqueemag.com/calendar" target="_blank">Marquee Magazine (SpinGo)</a>
+<li><a href="http://www.denver.org/events/submit-event/" target="_blank">VISIT DENVER</a>
 <li><a href="http://www.westword.com/feedback/SubmitAnEvent/" target="_blank">Westword</a>
 <li><a href="http://yellowscene.com/" target="_blank">Yellow Scene</a>
   </ul>
