--- a/band/promo.html
+++ b/band/promo.html
@@ -40,9 +40,9 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <p>
   <h3>Social Media (other)</h3>
   <ul>
-  <li><a href="https://www.facebook.com/groups/368200763239053/" target="_blank">Colorado Music Lovers @ Facebook</a>
-  <li><a href="https://www.facebook.com/groups/404791456212782/" target="_blank">Boulder Arts @ Facebook</a>
-  <li><a href="https://www.facebook.com/groups/DenverMusicScene/" target="_blank">Denver Music Scene @ Facebook</a>
+  <li><a href="https://www.facebook.com/groups/404791456212782/" target="_blank">Facebook &gt; Boulder Arts</a>
+  <li><a href="https://www.facebook.com/groups/368200763239053/" target="_blank">Facebook &gt; Colorado Music Lovers</a>
+  <li><a href="https://www.facebook.com/groups/DenverMusicScene/" target="_blank">Facebook &gt; Denver Music Scene</a>
   <li><a href="http://www.jambase.com/shows/AddShow.aspx" target="_blank">JamBase</a>
   <li><a href="http://www.reverbnation.com" target="_blank">ReverbNation</a>
   </ul>
