--- a/band/promo.html
+++ b/band/promo.html
@@ -33,7 +33,7 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <ul>
   <li><a href="https://www.facebook.com/purplesquirrelmusic" target="_blank">Facebook</a>
   <li><a href="https://www.instagram.com/purplesquirrelmusic" target="_blank">Instagram</a>
-  <li><a href="https://soundcloud.com/purplesquirrelmusic" target="_blank">Soundcloud</a>
+  <li><a href="https://soundcloud.com/purplesquirrelmusic" target="_blank">SoundCloud</a>
   <li><a href="https://twitter.com/psquirrelmusic" target="_blank">Twitter</a>
   <li><a href="https://www.youtube.com/channel/UCNRJiPjyRy5oV3vitG7Yg0g" target="_blank">YouTube</a>
   </ul>
