show social media urls

--- a/band/promo.html
+++ b/band/promo.html
@@ -1,20 +1,24 @@
 <html>
-<body>
+<body style="font-family:'Arial'">
 <img src="images/promo.jpg" border=0>
   <p>
   <h3>Band info</h3>
   <ul>
-  <li><b>Bio:</b>
+  <li><b>Short Bio:</b>
+Purple Squirrel plays a rare breed of original instrumental music, infused with modern jazz, funk, rock and blues influences. 
+  </li>
+  <li><b>Long Bio:</b>
 Purple Squirrel plays a rare breed of original instrumental music, infused with modern jazz, funk, rock and blues influences. Based in Boulder, Colorado, the quartet is the brainchild of guitarist Chris Malley and keyboardist Bob Schlesinger. Having played together as sidemen in many other projects, they created Purple Squirrel as their forum for musical mayhem. The rhythm-section roster features some of Colorado's finest bassists and drummers.
 </li>
   <li><b>Keywords:</b> jazz rock funk original instrumental</li>
-  <li><b>URL:</b> http://www.purplesquirrelmusic.com</li>
+  <li><b>Email:</b> info@purplesquirrelmusic.com</li>
+  <li><b>Website:</b> http://www.purplesquirrelmusic.com</li>
   </ul>
   <p>
   <h3>Venue info</h3>
   <ul>
   <li><b>Appaloosa Grill</b>, 535 16th St #11, Denver, CO 80202, <a href="http://appaloosagrill.com" target="_blank">http://appaloosagrill.com</a></li>
-  <li><b>The Arvada Tavern</b>, 5707 Olde Wadsworth Blvd. Arvada, CO 80002, 303-690-6269, <a href="http://arvadatavern.com" target="_blank">http://arvadatavern.com</a></li>
+  <li><b>The Arvada Tavern</b>, 5707 Olde Wadsworth Blvd, Arvada, CO 80002, 303-690-6269, <a href="http://arvadatavern.com" target="_blank">http://arvadatavern.com</a></li>
   <li><b>Baur's Listening Lounge</b>, 1512 Curtis Street, Denver, CO 80202, 303-615-4000, <a href="http://baursmagic.com" target="_blank">http://baursmagic.com</a></li>
   <li><b>Caffe Sole</b>, 637R South Broadway, Bouler, CO 80305, 303-499-2985, <a href="http://www.caffesole.com" target="_blank">http://www.caffesole.com</a></li>
   <li><b>DazzleJazz</b>, 930 Lincoln St, Denver, CO 80203, 303-839=5100, <a href="http://dazzlejazz.com" target="_blank">http://dazzlejazz.com</a></li>
@@ -47,11 +51,11 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <p>
   <h3>Social Media (primary)</h3>
   <ul>
-  <li><a href="https://www.facebook.com/purplesquirrelmusic" target="_blank">Facebook</a>
-  <li><a href="https://www.instagram.com/purplesquirrelmusic" target="_blank">Instagram</a>
-  <li><a href="https://soundcloud.com/purplesquirrelmusic" target="_blank">SoundCloud</a>
-  <li><a href="https://twitter.com/psquirrelmusic" target="_blank">Twitter</a>
-  <li><a href="https://www.youtube.com/channel/UCNRJiPjyRy5oV3vitG7Yg0g" target="_blank">YouTube</a>
+  <li>Facebook : <a href="https://www.facebook.com/purplesquirrelmusic" target="_blank">https://www.facebook.com/purplesquirrelmusic</a>
+  <li>Instagram : <a href="https://www.instagram.com/purplesquirrelmusic" target="_blank">https://www.instagram.com/purplesquirrelmusic</a>
+  <li>SoundCloud : <a href="https://soundcloud.com/purplesquirrelmusic" target="_blank">https://soundcloud.com/purplesquirrelmusic</a>
+  <li>Twitter : <a href="https://twitter.com/psquirrelmusic" target="_blank">https://twitter.com/psquirrelmusic</a>
+  <li>YouTube : <a href="https://www.youtube.com/channel/UCNRJiPjyRy5oV3vitG7Yg0g" target="_blank">https://www.youtube.com/channel/UCNRJiPjyRy5oV3vitG7Yg0g</a>
   </ul>
   <p>
   <h3>Social Media (other)</h3>
