--- a/band/promo.html
+++ b/band/promo.html
@@ -17,13 +17,13 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <p>
   <h3>Venue info</h3>
   <ul>
-  <li><b>Appaloosa Grill</b>, 535 16th St #11, Denver, CO 80202, <a href="http://appaloosagrill.com" target="_blank">http://appaloosagrill.com</a></li>
+  <li><b>Appaloosa Grill</b>, 535 16th St #11, Denver, CO 80202, 720-932-1700, <a href="http://appaloosagrill.com" target="_blank">http://appaloosagrill.com</a></li>
   <li><b>The Arvada Tavern</b>, 5707 Olde Wadsworth Blvd, Arvada, CO 80002, 303-690-6269, <a href="http://arvadatavern.com" target="_blank">http://arvadatavern.com</a></li>
   <li><b>Baur's Listening Lounge</b>, 1512 Curtis Street, Denver, CO 80202, 303-615-4000, <a href="http://baursmagic.com" target="_blank">http://baursmagic.com</a></li>
   <li><b>Caffe Sole</b>, 637R South Broadway, Bouler, CO 80305, 303-499-2985, <a href="http://www.caffesole.com" target="_blank">http://www.caffesole.com</a></li>
-  <li><b>DazzleJazz</b>, 930 Lincoln St, Denver, CO 80203, 303-839=5100, <a href="http://dazzlejazz.com" target="_blank">http://dazzlejazz.com</a></li>
+  <li><b>DazzleJazz</b>, 930 Lincoln St, Denver, CO 80203, 303-839-5100, <a href="http://dazzlejazz.com" target="_blank">http://dazzlejazz.com</a></li>
   <li><b>License No. 1</b>, 2115 13th St, Boulder, CO 80302, 303-443-0486, <a href="http://www.license1boulderado.com" target="_blank">http://www.license1boulderado.com</a></li>
-  <li><b>The Laughing Goat</b>, 1709 Pearl Street, Bouler, CO 80302, <a href="http://thelaughinggoat.com" target="_blank">http://thelaughinggoat.com</a></li>
+  <li><b>The Laughing Goat</b>, 1709 Pearl Street, Bouler, CO 80302, (no phone), <a href="http://thelaughinggoat.com" target="_blank">http://thelaughinggoat.com</a></li>
   <li><b>Mountain Sun</b>, 1535 Pearl St, Boulder, CO 80302, 303-546-0886, <a href="http://www.mountainsunpub.com" target="_blank">http://www.mountainsunpub.com</a></li>
   <li><b>Nocturne</b>, 1330 27th St, Denver, CO 80205, 303-295-3333, <a href="http://www.nocturnejazz.com" target="_blank">http://www.nocturnejazz.com</a></li>
   <li><b>Southern Sun</b>, 627 South Broadway, Boulder, CO 80305, 303-543-0886, <a href="http://www.mountainsunpub.com" target="_blank">http://www.mountainsunpub.com</a></li>
