videos from PS YouTube channel

--- a/watch.html
+++ b/watch.html
@@ -24,11 +24,19 @@
 <!-- End navigation image map -->
 
    <br><br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/lYIDdkUM3RM" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/37fM-7BXJMU" frameborder="0" allowfullscreen></iframe>
+   <br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tJ-r93dRh_I" frameborder="0" allowfullscreen></iframe>
+   <br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6dFQDhKzRZI" frameborder="0" allowfullscreen></iframe>
+   <br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_KU_AtjfI_s" frameborder="0" allowfullscreen></iframe>
+   <br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SLjcviGrvhA" frameborder="0" allowfullscreen></iframe>
+   <br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-H8t5XVwM40" frameborder="0" allowfullscreen></iframe>
    <br><br>
 <iframe width="560" height="315" src="//www.youtube.com/embed/L1oIUaR_xGA?list=PLRNWh80X1hANJ6JO56gb-F60wpmAy0A_z" frameborder="0" allowfullscreen></iframe>
-   <br><br>
-<iframe width="560" height="315" src="//www.youtube.com/embed/hA4piMHWPdc" frameborder="0" allowfullscreen></iframe>
    <br><br>
 <div style="font:12px arial">
 Copyright &copy; 2011-2017 Purple Squirrel - All Rights Reserved
