add Denver Loft full episode to YouTube channel

--- a/watch.html
+++ b/watch.html
@@ -36,7 +36,7 @@
    <br><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-H8t5XVwM40" frameborder="0" allowfullscreen></iframe>
    <br><br>
-<iframe width="560" height="315" src="//www.youtube.com/embed/L1oIUaR_xGA?list=PLRNWh80X1hANJ6JO56gb-F60wpmAy0A_z" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/V6UwaVGkY7g" frameborder="0" allowfullscreen></iframe>
    <br><br>
 <div style="font:12px arial">
 Copyright &copy; 2011-2017 Purple Squirrel - All Rights Reserved
