--- a/info.html
+++ b/info.html
@@ -35,7 +35,7 @@ multi-instrumentalist (guitar, mandolin, violin, bass, keyboards), composer and
 recording engineer.  He played widely in New England, New York and Los Angeles 
 before moving to Colorado.  Comfortable in all styles and 
 situations, he's the first-call guitarist for many groups. Chris is a prolific composer, 
-and has written the majority of Purple Squirrel's material &#8212; including 52 tunes 
+and has written the majority of Purple Squirrel's material.
 in 2014, one per week!
 <p>
 <a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger<a> is a pianist,
