--- a/info.html
+++ b/info.html
@@ -48,30 +48,30 @@ commercials and theater.
 <p>
 <b>Honorary squirrels</b> ...
 <p>
-Bass &#8212
-<a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a> :: 
-<a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> :: 
-<a href="https://www.facebook.com/chris.engleman.9" target="_blank">Chris Engleman</a> :: 
-<a href="https://ericthorin.com" target="_blank">Eric Thorin</a> :: 
-<a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a> ::
-<a href="http://colorado.academia.edu/BrianCasey" target="_blank">Brian Casey</a>
+Bass:  
+<a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a> | 
+<a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> | 
+<a href="https://www.facebook.com/chris.engleman.9" target="_blank">Chris Engleman</a> | 
+<a href="https://ericthorin.com" target="_blank">Eric Thorin</a> | 
+<a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a> |
+<a href="http://colorado.academia.edu/BrianCasey" target="_blank">Brian Casey</a> | 
+<a href="https://www.facebook.com/patrick.mcdevitt.353" target="_blank">Patrick McDevitt</a>
 <p>
-Drums &#8212
-<a href="http://www.christianteele.com" target="_blank">Christian Teele</a> :: 
-<a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> :: 
-<a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a> ::
+Drums:  
+<a href="http://www.christianteele.com" target="_blank">Christian Teele</a> | 
+<a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> | 
+<a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a> | 
 Matt Houston
 <p>
-Keys &#8212
-<a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> :: 
-<a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> :: 
-<a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a> :: 
-<a href="https://www.facebook.com/victor.mestasperez" target="_blank">Victor Mestas</a> :: 
-<a href="http://www.revellmusic.com" target="_blank">Adam Revell</a>
+Keys: 
+<a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> | 
+<a href="https://www.facebook.com/victor.mestasperez" target="_blank">Victor Mestas</a> | 
+<a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> | 
+<a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a>
 <p>
-Horns &#8212
-<a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a> ::
-<a href="https://www.facebook.com/tim.libby.96" target="_blank">Tim Libby</a> ::
+Horns: 
+<a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a> | 
+<a href="https://www.facebook.com/tim.libby.96" target="_blank">Tim Libby</a> | 
 <a href="http://www.bobbyrebz.com" target="_blank">Bob Rebholz</a>
 </div>
 <br><br>
